# pytkdocs_tweaks

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
pytkdocs_tweaks/: __init__.py
