[project]
name = "pytkdocs_tweaks"
version = "0.0.7"
description = "Some custom tweaks to the results produced by pytkdocs (part of mkdocstrings)."
readme = "README.md"
requires-python ="~=3.8"
license = {file = "LICENSE"}
authors = [
  {name = "Patrick Kidger", email = "contact@kidger.site"},
]
keywords = ["documentation", "mkdocs", "mkdocs-material", "mkdocstrings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]
urls = {repository = "https://github.com/patrick-kidger/pytkdocs_tweaks" }
dependencies = ["pytkdocs>=0.15.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["pytkdocs_tweaks/*"]

[tool.ruff]
select = ["E", "F", "I001"]
ignore = ["E402", "E721", "E731", "E741", "F722"]
ignore-init-module-imports = true
fixable = ["I001", "F401"]

[tool.ruff.isort]
combine-as-imports = true
lines-after-imports = 2
extra-standard-library = ["typing_extensions"]
order-by-type = false

[tool.pyright]
reportIncompatibleMethodOverride = true
include = ["pytkdocs_tweaks"]
